move to afteracademy

--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,8 @@ REDIS_PASSWORD=changeit
 ACCESS_TOKEN_VALIDITY_SEC=172800
 # 7 DAYS: 604800 Sec
 REFRESH_TOKEN_VALIDITY_SEC=604800
-TOKEN_ISSUER=api.goserve.unusualcode.org
-TOKEN_AUDIENCE=goserve.unusualcode.org
+TOKEN_ISSUER=api.goserve.afteracademy.com
+TOKEN_AUDIENCE=goserve.afteracademy.com
 
 RSA_PRIVATE_KEY_PATH="keys/private.pem"
 RSA_PUBLIC_KEY_PATH="keys/public.pem"
