--- a/.env.example
+++ b/.env.example
@@ -4,16 +4,14 @@ GO_MODE=debug
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8080
 
-DB_HOST=mongo
-DB_PORT=27017
-DB_NAME=goserver-dev-db
-DB_USER=goserver-dev-db-user
+DB_HOST=postgres
+DB_PORT=5432
+DB_NAME=goserver_dev_db
+DB_USER=goserver_dev_db_user
 DB_USER_PWD=changeit
 DB_MIN_POOL_SIZE=2
 DB_MAX_POOL_SIZE=5
 DB_QUERY_TIMEOUT_SEC=60
-DB_ADMIN=admin
-DB_ADMIN_PWD=changeit
 
 REDIS_HOST=redis
 REDIS_PORT=6379
