--- a/.test.env.example
+++ b/.test.env.example
@@ -1,16 +1,17 @@
 # debug, release, test
-GO_MODE=test
+GO_MODE=debug
 
-DB_HOST=mongo
-DB_PORT=27017
-DB_NAME=goserver-test-db
-DB_USER=goserver-test-db-user
+SERVER_HOST=0.0.0.0
+SERVER_PORT=8080
+
+DB_HOST=postgres
+DB_PORT=5432
+DB_NAME=goserver_test_db
+DB_USER=goserver_test_db_user
 DB_USER_PWD=changeit
 DB_MIN_POOL_SIZE=2
 DB_MAX_POOL_SIZE=5
 DB_QUERY_TIMEOUT_SEC=60
-DB_ADMIN=admin
-DB_ADMIN_PWD=changeit
 
 REDIS_HOST=redis
 REDIS_PORT=6379
@@ -23,5 +24,5 @@ REFRESH_TOKEN_VALIDITY_SEC=604800
 TOKEN_ISSUER=api.goserve.afteracademy.com
 TOKEN_AUDIENCE=goserve.afteracademy.com
 
-RSA_PRIVATE_KEY_PATH="../keys/private.pem"
-RSA_PUBLIC_KEY_PATH="../keys/public.pem"
+RSA_PRIVATE_KEY_PATH="keys/private.pem"
+RSA_PUBLIC_KEY_PATH="keys/public.pem"
